@@ -1,5 +1,7 @@
 * marks an incompatible change
 
+  o [Session] during reload, new method for pairing old and new subgoals
+    based on goal shapes, stored in database.
   o [Session] prover versions are stored in database. A proof is
     marked obsolete if it was made by a prover with another version
     than the current.
